修改 7.create-resource-unit.md

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/7.create-resource-unit.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/7.create-resource-unit.md
@@ -35,7 +35,7 @@ MAX_CPU [=] cpu_num,
 
 ## 示例
 
-创建资源单元 `unit1` 配置为 4 个 CPU，`5G` 内存，128 个 IOPS，`10G` 日志盘。
+创建资源单元 `unit1` 配置为 4 个 CPU，`5G` 内存，1280 个 IOPS，`10G` 日志盘和 IOPS 的权重值为 1。
 
 ```sql
 obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 4, MEMORY_SIZE '5G', MAX_IOPS 1280,LOG_DISK_SIZE '10G', MIN_IOPS=1024, IOPS_WEIGHT=1;
