--- a/zh-CN/8.sql-reference/5.sql-statements/16.create-restore-point.md
+++ b/zh-CN/8.sql-reference/5.sql-statements/16.create-restore-point.md
@@ -7,7 +7,7 @@
 > **注意**
 >
 > * 系统租户不支持创建还原点。
-> * 当前社区版 OceanBase 数据库并不支持通过快照功能，进行指定快照的数据查询，也未支持将数据回滚到该还原点。
+> * 当前 OceanBase 数据库社区版并不支持通过快照功能，进行指定快照的数据查询，也未支持将数据回滚到该还原点。
 
 创建还原点后，可以在 V$RESTORE_POINT 视图中查询到该还原点的 SNAPSHOT 值，然后通过 `SELECT * FROM table_name AS OF SNAPSHOT snapshot;` 查询数据快照中的值。
 
@@ -34,6 +34,7 @@ CREATE RESTORE POINT restore_point;
   ```
 
   
+
 
 
 
