--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -27,7 +27,7 @@
 
 * OCP
   
-  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP，是一款为 OceanBase 数据库集群量身打造的企业级管理平台，提供对 OceanBase 集群的图形化管理能力。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/oceanbase-ocp-cn)
+  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/oceanbase-ocp-cn)
 
 * OCP Express
   
