修改 8.create-tenant.md

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md
@@ -48,10 +48,10 @@ opt_set_sys_var:
 
 ## 示例
 
-* 创建租户。
+* 创建一个 3 副本的 MySQL 租户。
 
   ```sql
-  obclient> CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4',PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') set ob_tcp_invited_nodes='%';
+  obclient> CREATE TENANT IF NOT EXISTS test_tenant CHARSET='utf8mb4', ZONE_LIST=('zone1','zone2','zone3'), PRIMARY_ZONE='zone1;zone2,zone3', RESOURCE_POOL_LIST=('pool1');
   ```
 
 * 创建 Oracle 兼容模式租户。
