--- a/zh-CN/7.reference/5.system-reference/2.system-variable/3.global-system-variable/47.nls_currency-global.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable/3.global-system-variable/47.nls_currency-global.md
@@ -4,7 +4,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>该变量当前暂不生效。</p>
+    <p>该变量不支持修改。</p>
   </main>
 
 |   属性    |                                                     描述                                                     |
