--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/229.unit_balance_resource_weight.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/229.unit_balance_resource_weight.md
@@ -18,7 +18,7 @@ unit_balance_resource_weight
 <main id="notice" type='notice'>
   <h4>注意</h4>
   <ul>
-  <li>默认情况下，权重值为空。如果设置了权重值，所有权重值的总和必须为100。  </li>
-  <li>当打开 enable_unit_balance_resource_weight 时， unit_balance_resource_weight 配置才能生效。  </li>
+  <li>默认情况下，权重值为空。如果设置了权重值，所有权重值的总和必须为 100。  </li>
+  <li>当打开 <code>enable_unit_balance_resource_weight</code> 时， <code>unit_balance_resource_weight</code> 配置才能生效。  </li>
   </ul>
 </main>
