--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/74.enable_manual_merge.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/74.enable_manual_merge.md
@@ -1,4 +1,4 @@
-enable_manual_merge 
+enable_manual_merge
 ========================================
 
 `enable_manual_merge` 用于设置是否开启手工合并。
@@ -15,6 +15,10 @@ enable_manual_merge
 | 取值范围             | </li><li> True   </li><li> False    |
 | 是否重启 OBServer 节点生效 | 否                                                                                                      |
 
+`enable_manual_merge` 为 True 时，`alter system major freeze` 并不会触发真正的合并，而需要手动对各个 Zone 进行逐个合并。
+例如通过以下命令对 zone1 和 zone2 进行逐个合并，此外，合并的顺序还可以按需调整。
 
-
-`enable_manual_merge` 用于 DBA 管理错峰是否暂停，只有在 `enable_manual_merge` 为 True 时，`max_merge_duration_time` 才有效。如果这个值为 True，则认为 DBA 关闭自动合并。
+```sql
+alter system start merge zone='zone1'; 
+alter system start merge zone='zone2'; 
+```
