修改 5.real-time-execution-plan-display.md

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -203,7 +203,7 @@ obclient> DESC V$SQL_MONITOR_STATNAME;
 
 ### 示例
 
-如下为通过 `GV$SQL_PLAN_MONITORSQL_PLAN_MONITOR` 视图和 `V$SQL_MONITOR_STATNAME` 视图查询执行计划信息的示例。
+如下为通过 `GV$SQL_PLAN_MONITOR` 视图和 `V$SQL_MONITOR_STATNAME` 视图查询执行计划信息的示例。
 
 ```sql
 --  获取 trace_id
