修改 6.hints-related-to-query-transformation-of-oracle-mode.md

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/6.hints-related-to-query-transformation-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/6.hints-related-to-query-transformation-of-oracle-mode.md
@@ -84,7 +84,7 @@ SELECT /*+ MERGE(v) */ e1.last_name, e1.salary, v.avg_salary
    ORDER BY e1.last_name;
 ```
 
-当 `MERGE` Hint 不带参数时，应将其放在视图查询块中。当 `MERGE` Hint 将视图名称作为参数时，应将其放在环绕查询中。
+当 `MERGE` Hint 不带参数时，应将其放在视图查询块中。当 `MERGE` Hint 将视图名称作为参数时，应将其放在外围查询中。
 
 ## NO_MERGE Hint
 
@@ -107,7 +107,7 @@ SELECT /*+ NO_MERGE(seattle_dept) */ e.last_name, seattle_dept.dept_name
   WHERE e.dept_id = seattle_dept.dept_id;
 ```
 
-在视图查询块中使用 `NO_MERGE` Hint 时，不需要为它指定参数。在环绕查询中使用 `NO_MERGE` Hint 时，需要将视图名称指定为它的参数。
+在视图查询块中使用 `NO_MERGE` Hint 时，不需要为它指定参数。在外围查询中使用 `NO_MERGE` Hint 时，需要将视图名称指定为它的参数。
 
 ## UNNEST Hint
 
