修改 2.create-job-oracle.md

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
@@ -79,4 +79,4 @@ destination_name    IN  VARCHAR2 DEFAULT 'null');
 
 如果要将作业与指定类或程序相关联，需要具有该类或程序的 `EXECUTE` 权限。
 
-并不是所有可能的作业属性都可以用 `CREATE_JOB` 设置，一些参数必须在创建作业后设置。例如 `job_priority` 和 `max_runs` 等参数需要通过 `SET_ATTRIBUTE` 过程进行设置。请使用 `CREATE_JOBS` 过程高效创建多个作业。
+并不是所有可能的作业属性都可以用 `CREATE_JOB` 设置，一些参数必须在创建作业后设置。例如 `job_priority` 和 `max_runs` 等参数需要通过 `SET_ATTRIBUTE` 过程进行设置。
