--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -54,7 +54,7 @@ After the unit configs and resource pools are created and associated, you can cr
 
 In this example, the OceanBase cluster contains only one node. Therefore, you can create only a single-replica tenant. If you want to create a three-replica tenant, the OceanBase cluster must contain at least three nodes.
 
-Define a single-replica tenant named `tenant1`, set the character set to `utf8mb4`, and set the resource pool to `pool1`. `ob_tcp_invited_nodes` specifies the whitelist for the tenant. You can set the initial value to % to allow access from all IP addresses. You can change the value as required later on.
+Define a single-replica tenant named `tenant1`, set the character set to `utf8mb4`, and set the resource pool to `pool1`. `ob_tcp_invited_nodes` specifies the allowlist for the tenant. You can set the initial value to % to allow access from all IP addresses. You can change the value as required later on.
 
 ```sql
 obclient [oceanbase]> CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4', ZONE_LIST=('zone1'), PRIMARY_ZONE='zone1', RESOURCE_POOL_LIST=('pool1') SET ob_tcp_invited_nodes='%';
