--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
@@ -1,19 +1,13 @@
-# Overview of Physical Standby Database
+# Limitations
 
-Physical Standby Database is an important part of the high availability solution of OceanBase Database. If the primary database becomes unavailable, for example, the majority of replicas fail, a standby database takes over the services. Lossless switchover with a recovery point objective (RPO) of 0 and lossy switchover with an RPO greater than 0 are supported to minimize the service downtime.
+This topic describes the limitations on the Physical Standby Database feature.
 
-Physical Standby Database is equivalent to the primary/standby cluster deployment mode in OceanBase Database earlier than V4.1.0. All user tenants in the primary cluster are primary tenants, and all user tenants in a standby cluster are standby tenants. Modifications of primary tenants are automatically synchronized to standby clusters.
-
-Since OceanBase Database V4.1.0, Physical Standby Database is implemented in the form of primary and standby tenants, and clusters are only containers of tenants. User tenants are categorized into primary tenants and standby tenants. A primary tenant is a business tenant created by a user and supports all database service capabilities, such as query, DML operations, and DDL operations. A standby tenant provides only disaster recovery capabilities and read-only services. A Physical Standby Database high-availability solution consists of a primary tenant and multiple standby tenants.
-
-Features of Physical Standby Database of OceanBase Database V4.1.0:
-
-* The primary tenant and its standby tenants can be deployed in the same cluster or in different clusters, depending on the required level of disaster recovery.
-
-* The primary and standby tenants are separately deployed. You need to create log synchronization links between the primary and standby tenants. OceanBase Database V4.1.0 supports only log synchronization based on log archiving.
-
-* Physical Standby Database supports only the maximum performance mode. The maximum protection mode and maximum availability mode are no longer supported.
-
-<!-- The following figure shows the deployment architecture of Physical Standby Database.
-
-![Deployment architecture of Physical Standby Database](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png) -->
+| Item | Description |
+|-------------------------------|----------------------------------------------|
+| Number of standby tenants | Unlimited |
+| Heterogeneity of the primary and standby tenants | <ul><li>The primary and standby tenants must use the same unit config. If they use different CPU or memory configurations, stability issues may arise. </li><li>The primary and standby tenants must have the same `UNIT_NUM` value. </li></ul> |
+| Synchronization of parameter modifications between the primary and standby tenants | The parameters of the primary tenant are independent of those of a standby tenant, and parameter modifications are not physically synchronized. After you modify a parameter for the primary tenant, you must assess whether to modify this parameter for the standby tenants.  |
+| Synchronization of system variable modifications between the primary and standby tenants | After a system variable is modified in the primary tenant, the modification is synchronized to the standby tenants.  |
+| Operations in standby tenants | <ul><li>A standby tenant supports strong-consistency reads and weak-consistency reads, but does not support writes. </li><li>You can trigger only minor compactions and cannot trigger major compactions for a standby tenant. Standby tenants synchronize major compaction information from the primary tenant. </li></ul> |
+| Switchover | <ul><li>To change the role of a standby tenant to PRIMARY, make sure that all servers are online. </li><li>Before you change the role of a standby tenant to PRIMARY, make sure that this standby tenant has been synchronized with the primary tenant. </li></ul> |
+| Failover | Make sure that all servers in the cluster to which the standby tenant belongs are online.  |
