--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/3.perform-failover.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/3.perform-failover.md
@@ -4,7 +4,7 @@ When the primary tenant becomes unavailable, you can switch a standby tenant to 
 
 ## Procedure
 
-1. Log on to the database as the administrator of the standby tenant or the `sys` tenant of the cluster where the standby tenant resides.
+1. Log on to the database as the administrator of the standby tenant or as the `sys` tenant of the cluster where the standby tenant resides.
 
 2. Execute the failover statement to switch the standby tenant to the PRIMARY role.
 
