--- a/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
@@ -1,8 +1,8 @@
 # Network security access control
 
-OceanBase Database provides a whitelist policy to implement network security access control. You can use the tenant whitelist feature to set which clients are allowed to access the current tenant.
+OceanBase Database provides an allowlist policy to implement network security access control. You can use the tenant allowlist feature to set which clients are allowed to access the current tenant.
 
-The tenant whitelist is controlled through the system variable `ob_tcp_invited_nodes`, which is a global whitelist parameter for the tenant. The default value is `127.0.0.1,::1`, which means that only the local IP address is allowed to connect to the tenant. This variable supports a list of values separated by commas, for example: `A,B,C,D`. When a user logs in to an OBServer node, the OBServer node will verify the user's IP address against the values A, B, C, and D. If the user's IP address matches none of them, the access is denied. If it matches any of them, the user is granted access through the whitelist. 
+The tenant allowlist is controlled through the system variable `ob_tcp_invited_nodes`, which is a global allowlist parameter for the tenant. The default value is `127.0.0.1,::1`, which means that only the local IP address is allowed to connect to the tenant. This variable supports a list of values separated by commas, for example: `A,B,C,D`. When a user logs in to an OBServer node, the OBServer node will verify the user's IP address against the values A, B, C, and D. If the user's IP address matches none of them, the access is denied. If it matches any of them, the user is granted access through the allowlist. 
 
 You can specify the values in the following formats:
 
@@ -12,10 +12,10 @@ You can specify the values in the following formats:
 
 <main id="notice" type='explain'>
    <h4>Note:</h4>
-   <p>Modifying the tenant whitelist will not affect existing sessions.</p>
+   <p>Modifying the tenant allowlist will not affect existing sessions.</p>
 </main>
 
-## View and set a tenant whitelist
+## View and set a tenant allowlist
 
 1. Log on to the `sys` tenant of a cluster using the root user. 
 
@@ -23,7 +23,7 @@ You can specify the values in the following formats:
    obclient -uroot@sys -P2881 -h10.xxx.xxx.1 -p***1***
    ```
 
-2. Execute the following statement to view the tenant whitelist: 
+2. Execute the following statement to view the tenant allowlist: 
 
    ```shell
    obclient> SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
@@ -36,7 +36,7 @@ You can specify the values in the following formats:
 
    where `%` indicates that any client IP is allowed to connect to the tenant. 
 
-3. To modify the tenant whitelist, execute the following statement: 
+3. To modify the tenant allowlist, execute the following statement: 
 
    Example:
 
