--- a/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
+++ b/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
@@ -26,10 +26,10 @@ The method for enabling OBServer transmission encryption involves the use of mul
    When the parameter is set to `TRUE`, SSL communication in MySQL is immediately enabled.
    ```
 
-4. Configure an SSL whitelist for RPC communication. Since the TCP connections between OBServer nodes are persistent, SSL-encrypted RPC communication can be enabled only after the OBServer nodes are restarted.
+4. Configure an SSL allowlist for RPC communication. Since the TCP connections between OBServer nodes are persistent, SSL-encrypted RPC communication can be enabled only after the OBServer nodes are restarted.
 
    ```sql
-   A whitelist is required to enable SSL-encrypted RPC communication.
+   An allowlist is required to enable SSL-encrypted RPC communication.
    alter system set _ob_ssl_invited_nodes='ALL'; Enable SSL for the entire cluster.
    alter system set _ob_ssl_invited_nodes='135.xxx.xx.xx, 128.xxx.xx.xx'; Enable SSL only for OBServer nodes with the specified IP addresses.
    ssl
