--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
@@ -44,7 +44,7 @@ An OBServer node is added to the live-but-unavailable blocklist in one of the fo
 
 * After an off-peak major compaction begins, Root Service first updates internal tables to set the major compaction status of the relevant zone, and then switches the leaders from this zone to other zones. ODP periodically updates the zone status table to set the zone status. After the status of the relevant zone is updated, all OBServer nodes in this zone are set to the alive-but-unavailable state. During an off-peak major compaction, all OBServer nodes in a zone that is undergoing a major compaction are in the alive-but-unavailable blocklist.
 
-## Blacklist priorities
+## Blocklist priorities
 
 The down blocklist has a higher priority than the alive-but-unavailable blocklist. The priority of a major compaction or an upgrade of a zone is higher than that of an OBServer node.
 
