--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -1,6 +1,6 @@
 # Manually initiate a minor compaction
 
-You can execute the `ALTER SYSTEM MINOR FREEZE` statement in the sys tenant to manually initiate a minor compaction at the tenant, zone, server, log stream, or tablet level.
+You can execute the `ALTER SYSTEM MINOR FREEZE` statement in the `sys` tenant to manually initiate a minor compaction at the tenant, zone, server, log stream, or tablet level.
 
 ## Procedure
 
