--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
@@ -15,7 +15,7 @@ The most common parameter for controlling minor compactions is `major_compact_tr
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>The value of the <code>major_compact_trigger</code> parameter increases along with the number of minor compactions triggered because the MemTable memory usage reaches the specified threshold. Manually executed minor compactions are not counted. The value of the <code>minor_compact_trigger</code> parameter does not increase no matter how many minor compactions are manually executed. For example, assume that the value of the <code>major_compact_trigger</code> parameter is <code>3</code>. After <code>ALTER SYSTEM MINOR FREEZE</code> is executed three times, a major compaction is not triggered when the MemTable memory usage reaches the specified threshold, because the manually executed minor compactions are not counted. </p>
+    <p>The value of the <code>major_compact_trigger</code> parameter increases along with the number of minor compactions triggered because the MemTable memory usage reaches the specified threshold. Manually executed minor compactions are not counted. The value of the <code>minor_compact_trigger</code> parameter does not increase no matter how many minor compactions are manually executed. For example, assume that the value of the <code>major_compact_trigger</code> parameter is <code>3</code>. After <code>ALTER SYSTEM MINOR FREEZE</code> is manually executed three times, a major compaction is not triggered when the MemTable memory usage reaches the specified threshold, because the manually executed minor compactions are not counted. </p>
   </main>
 
 ## Modify minor compaction parameters by using SQL statements
