--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
@@ -4,9 +4,9 @@ After you use the `MAJOR FREEZE` statement to initiate a major compaction, the s
 
 During the major compaction, you do not need to manually control the compaction sequence of the zones and rotating compaction is not involved. If an error occurs during the major compaction, you can manually control the major compaction. For example, if a checksum verification error occurs, the current major compaction for the tenant cannot end. In this case, you can suspend the current major compaction. After the checksum resumes normal as a result of manual intervention, you can clear the checksum error tag and resume the major compaction.
 
-## Manually control a major compaction from the sys tenant
+## Manually control a major compaction from the `sys` tenant
 
-After a major compaction begins, you can control the major compaction for all tenants or specified tenants from the sys tenant.
+After a major compaction begins, you can control the major compaction for all tenants or specified tenants from the `sys` tenant.
 
 Procedure:
 
@@ -37,7 +37,7 @@ Procedure:
       ```sql
       obclient> ALTER SYSTEM RESUME MERGE TENANT [=] ALL;
 
-      obclient> ALTER SYSTEM RESUME MERGE TENANT [=] tenant1, tenant2;
+      obclient> ALTER SYSTEM RESUME MERGE TENANT [=] tenant1,tenant2;
       ```
 
       `[=]` indicates that the equal sign (=) is optional. You must replace `tenant1` and`tenant2` with their actual tenant names.
