--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/3.data-compression/2.use-data-encoding-and-compression.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/3.data-compression/2.use-data-encoding-and-compression.md
@@ -1,6 +1,6 @@
 # Data encoding and compression
 
-OceanBase supports MySQL and Oracle tenants. To facilitate the use in MySQL or Oracle mode, OceanBase Database provides multiple configuration methods for you to use data encoding and data compression.
+OceanBase Database supports MySQL and Oracle tenants. To facilitate the use in MySQL or Oracle mode, OceanBase Database provides multiple configuration methods for you to use data encoding and data compression.
 
 OceanBase Database supports the use of DDL statements to configure encoding and compression of data tables.
 
@@ -55,7 +55,7 @@ Valid values of the `compression` parameter:
 
 Sample code:
 
-* Specify the encoding format and compression algorithm when you create the table:
+* Specify the encoding format and compression algorithm when you create the table.
 
    Execute the following statement to set the encoding format to encoding and the compression algorithm to zstd_1.0 when you create a table:
 
@@ -71,7 +71,7 @@ Sample code:
    ) ROW_FORMAT=CONDENSED COMPRESSION='zstd_1.0';
    ```
 
-* Modify the encoding format and compression algorithm when you modify the table:
+* Modify the encoding format and compression algorithm when you modify the table.
 
    Execute the following statement to change the table encoding format to selective encoding and the compression algorithm to zlib_1.0:
 
@@ -119,7 +119,7 @@ Valid values of the `compression` parameter:
 
 Sample code:
 
-* Specify the encoding format and compression algorithm when you create the table:
+* Specify the encoding format and compression algorithm when you create the table.
 
    Execute the following statement to set the encoding format to encoding and the compression algorithm to lz4_1.0 when you create a table:
 
@@ -135,7 +135,7 @@ Sample code:
    ) COMPRESS FOR QUERY;
    ```
 
-* Modify the encoding format and compression algorithm when you modify the table:
+* Modify the encoding format and compression algorithm when you modify the table.
 
    Execute the following statement to change the table encoding format to encoding and the compression algorithm to zstd_1.3.8:
 
@@ -163,10 +163,10 @@ Perform the following steps:
 
    After the parameter is set, data is progressively rewritten during major compactions each day.
 
-  <main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>To complete data rewriting at the earliest opportunity, you can set the <code>progressive_merge_num</code> to <code>1</code>, and launch a major compaction. For more information about how to manually initiate a major compaction, see <a href="../2.merge-management/4.manually-trigger-a-merge.md">Manually initiate a major compaction</a>. </p>
-  </main>
+   </main>
 
 3. Change the compression algorithm.
 
