--- a/en-US/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/26.ob_ssl_invited_common_names.md
+++ b/en-US/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/26.ob_ssl_invited_common_names.md
@@ -19,18 +19,18 @@ After the server verifies the username and password, it checks the following thr
 
 
 
-* An application whitelist is configured on the server, and the whitelist is not empty.
+* An application allowlist is configured on the server, and the allowlist is not empty.
 
 
 
-* The `cn` field of the subject of the client certificate is not included in the whitelist.
+* The `cn` field of the subject of the client certificate is not included in the allowlist.
 
 
 
 
 
 
-If none of these three conditions are met, the whitelist check fails and is ignored.
+If none of these three conditions are met, the allowlist check fails and is ignored.
 
 Sample code:
 
