--- a/en-US/7.reference/5.system-reference/2.system-variable-of-mysql-mode/97.ob_tcp_invited_nodes-of-mysql-mode.md
+++ b/en-US/7.reference/5.system-reference/2.system-variable-of-mysql-mode/97.ob_tcp_invited_nodes-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # ob_tcp_invited_nodes
 
-`ob_tcp_invited_nodes` specifies the IP whitelist of a tenant. The value can contain percent signs (%), underscores (_), and IP addresses. Multiple IP addresses are separated with commas (,). IP list matching, mask matching, and fuzzy matching are supported.
+`ob_tcp_invited_nodes` specifies the IP allowlist of a tenant. The value can contain percent signs (%), underscores (_), and IP addresses. Multiple IP addresses are separated with commas (,). IP list matching, mask matching, and fuzzy matching are supported.
 
 | **Property** | **Description** |
 |--------|---------------|
