--- a/en-US/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/1.general-obcdc-configuration-items.md
+++ b/en-US/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/1.general-obcdc-configuration-items.md
@@ -12,12 +12,12 @@ This topic describes the commonly used parameters in obcdc. For all parameters, 
 | config_fpath | Configuration persistence        | All obcdc configuration information will be dumped into this file.  |
 | working_mode | The working mode.                | The default working mode is the persistence mode.  |
 | store_service_path | The working mode.                | The path where persistent data is stored. This parameter takes effect only in persistence mode.  Relative path: The persistent data is stored in a relative path in the path of the process that calls obcdc.  Absolute path: The persistent data is stored in the specified absolute path, such as `store_service_path=/data/1`.  |
-| tb_white_list | Synchronization granularity      | The whitelist of tables to be synchronized.  |
-| tb_black_list | Synchronization granularity      | The blacklist of the tables that will not be synchronized.  |
-| tablegroup_white_list | Synchronization granularity      | The whitelist of table groups to be synchronized.  |
-| tablegroup_black_list | Synchronization granularity      | The blacklist of table groups that will not be synchronized.  |
-| enable_oracle_mode_match_case_sensitive | Synchronization granularity      | The case sensitivity of tenants against the blacklist or whitelist in Oracle mode of OceanBase Database.  |
-| cluster_id_black_list | cluster_id                       | The blacklist of cluster IDs for synchronization.  |
+| tb_white_list | Synchronization granularity      | The allowlist of tables to be synchronized.  |
+| tb_black_list | Synchronization granularity      | The blocklist of the tables that will not be synchronized.  |
+| tablegroup_white_list | Synchronization granularity      | The allowlist of table groups to be synchronized.  |
+| tablegroup_black_list | Synchronization granularity      | The blocklist of table groups that will not be synchronized.  |
+| enable_oracle_mode_match_case_sensitive | Synchronization granularity      | The case sensitivity of tenants against the blocklist or allowlist in Oracle mode of OceanBase Database.  |
+| cluster_id_black_list | cluster_id                       | The blocklist of cluster IDs for synchronization.  |
 | memory_limit | Throttling                       | The memory threshold for triggering throttling in obcdc.  |
 | system_memory_avail_percentage_lower_bound | Throttling                       | The lower limit of the available system memory, in percentage.  |
 | part_trans_task_active_count_upper_bound | Throttling                       | The maximum number of active partition transactions.  |
