--- a/en-US/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/en-US/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -106,7 +106,7 @@ config.setUsername("root");
 config.setPassword("root");
 // Specify the UNIX start timestamp in seconds. A value of 0 specifies to start the client from the current time. 
 config.setStartTimestamp(0L);
-// Specify the subscription whitelist in the tenant.db.table format. Use asterisks (*) as wildcards.
+// Specify the subscription allowlist in the tenant.db.table format. Use asterisks (*) as wildcards.
 config.setTableWhiteList("sys.*.*");
 
 // Specify the IP address of the server where oblogproxy is deployed to create the client instance.
