--- a/en-US/8.FAQ/6.cluster-management.md
+++ b/en-US/8.FAQ/6.cluster-management.md
@@ -160,7 +160,7 @@ The following table describes the main causes and key logs.
 | Main cause   | Description  | Key log and diagnosis method                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | --- | --- |----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Clog replay is stuck    | During the clog reconfirm process, the confirmed logs in the left pane of the sliding window are all committed for replay. If the clog replay is stuck due to various exceptions such as a memory allocation failure or replay error, clogs will be accumulated in the sliding window. When the number of accumulated clogs reaches the specified threshold (which is 20,000), the sliding window is full and can no longer receive new logs. As a result, the reconfirm process cannot proceed. | If the sliding window contains confirmed logs to be committed for replay, the clog module reports the [ERROR] level code -4023 in the observer.log file. The error keywords are:<br>`there are confirmed logs in sw, try again(partition_key={tid:1106108697592670, partition_id:0, part_cnt:1}, ret=-4023, new_start_id=371801833, start_id=371802703)`<br>Clog replay may be stuck due to many reasons such as a memory allocation failure or replay error. In this case, you must check the observer.log file by running the following commands: `grep ERROR observer.log | grep STORAGE | grep 'alloc memory'` and `grep ERROR observer.log | grep STORAGE | grep replay`. |
-| The clog disk is full  | During the clog reconfirm process, logs such as prepare and start_working are written and the confirmation by the majority of replicas is required. If these logs cannot be written on a server because the clog disk of the server is full, and the remaining normal servers are not the majority, the reconfirm process fails.  | If the clog disk is full, the clog module reports the [ERROR] level code -4264 in the observer.log file. The error keywords are:<br>`log out of disk space(partition_key={tid:1102810162709414, partition_id:46, part_cnt:0}, server="11.138.244.78:29432", ret=-4264, free_quota=-3381817344)`   |
+| The clog disk is full  | During the clog reconfirm process, logs such as prepare and start_working are written and the confirmation by the majority of replicas is required. If these logs cannot be written on a server because the clog disk of the server is full, and the remaining normal servers are not the majority, the reconfirm process fails.  | If the clog disk is full, the clog module reports the [ERROR] level code -4264 in the observer.log file. The error keywords are:<br>`log out of disk space(partition_key={tid:1102810162709414, partition_id:46, part_cnt:0}, server="xx.xx.xx.xx:29432", ret=-4264, free_quota=-3381817344)`   |
 | The clog synchronization network is disconnected           | During the clog reconfirm process, the candidate leader needs to communicate with the followers in various phases. Therefore, if packets cannot be sent or received or the latency in packet sending and receiving is too high due to network issues, the reconfirm process may fail.   | If the network is disconnected, multiple phases of the reconfirm process will fail. For example, if no reply from the followers is received after the prepare log is sent, a log with the following keywords will be constantly printed on the server of the candidate leader until this phase times out:<br>`max_log_ack_list not majority`<br>After the candidate leader writes the start_working log, it may not receive an acknowledgment from the majority of followers due to the network exception. Then, this phase will time out and fail. <br>The network disconnection may be caused by many reasons. Perform the following steps to troubleshoot the issue:<br><ol><li>Run the ping command. If the ping operation succeeds, the network is normal.</li><li>Run the sudo iptables -L command to check whether network isolation exists.</li><li>View the queue logs of the other tenant to check whether the queue is full and no more requests can be processed. </li></ol> |
 | Requests are accumulated in the queue of the SYS500 tenant | If requests are accumulated in the queue of the SYS500 tenant, new RPC requests can no longer be processed, messages related to the reconfirm process are no longer processed, and the logs on the leader show that the followers did not reply to any request. In this case, you need to analyze the situation and reasons of the accumulation of requests in the queue.  | View the situation of accumulation of requests in the queue. Search by the keywords `dump tenant info(tenant={id:500,` in the observer.log file of the leader or a follower. The content behind the `req_queue` keyword is the situation of the queue of the SYS500 tenant. <br>If you notice that requests are accumulated in the queue of the SYS500 tenant, you need to further analyze the causes. In this case, you can use OBStack to print the stack information about the current OBServer node and then send the information to OceanBase Technical Support for troubleshooting. |
 | Worker threads are insufficient     | -        | Check whether the following log indicating packet processing timeout exists:<br>`[20XX-XX-XX 11:12:12.103] easy_request.c:420(tid:7fe2cdc9f700)[57136] rpc time, packet_id :2425446521, pcode :4096, client_start_time :1517541127590356, start_send_diff :8, send_connect_diff: 0, connect_write_diff: 5, request_fly_ts: 188, arrival_push_diff: 2, wait_queue_diff: 4508603, pop_process_start_diff :2, process_handler_diff: 4184, process_end_response_diff: 1, response_fly_ts: 447, read_end_diff: 1, client_end_time :1517541132103797, dst: 10.101.X.X:XXXXX`<br>The value of `wait_queue_diff` reaches several seconds, which indicates that the processing by the worker threads is slow. In this case, check whether the value of `cpu_quota` (`cpu_quota_concurrency`, `workers_per_cpu_quota`, and `system_cpu_quota`) is too small. |
