--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.modify-the-restore-source-of-the-standby-tenant.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/3.modify-the-restore-source-of-the-standby-tenant.md
@@ -1,25 +1,25 @@
-# Change the recovery source of a standby tenant
+# Change the restore source of a standby tenant
 
-OceanBase Database allows you to switch the recovery source of a standby tenant without loss of archive logs.
+OceanBase Database allows you to switch the restore source of a standby tenant without loss of archive logs.
 
-When you create a standby tenant, you must specify the default recovery source of the standby tenant in the `RESTORE` statement. However, you can change the recovery source as needed. For example, if the specified default recovery source is another standby tenant, you can change the recovery source to the log archiving destination of the primary tenant.
+When you create a standby tenant, you must specify the default restore source of the standby tenant in the `RESTORE` statement. However, you can change the restore source as needed. For example, if the specified default restore source is another standby tenant, you can change the restore source to the archive destination of the primary tenant.
 
 ## Procedure
 
 1. Log on to the database as the administrator of the standby tenant or the `sys` tenant of the cluster where the standby tenant resides.
 
-2. Execute the following statement to set the recovery source of the standby tenant to the log archiving destination of the primary tenant:
+2. Execute the following statement to set the restore source of the standby tenant to the log archiving destination of the primary tenant:
 
-   * Execute the following statement in the `sys` tenant of the cluster where the standby tenant resides to specify the recovery source of the standby tenant:
+   * Execute the following statement in the `sys` tenant of the cluster where the standby tenant resides to specify the restore source of the standby tenant:
 
       ```sql
-      ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = archive_path' TENANT = tenant_name;
+      ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=archive_path' TENANT = tenant_name;
       ```
 
-   * Execute the following statement in the standby tenant to specify the recovery source of the standby tenant:
+   * Execute the following statement in the standby tenant to specify the restore source of the standby tenant:
 
       ```sql
-      ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = archive_path';
+      ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=archive_path';
       ```
 
    The `LOCATION` attribute specifies the log archiving destination of the primary tenant.
