--- a/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/5.adjust-the-log-synchronization-performance-of-the-standby-tenant.md
+++ b/en-US/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/5.adjust-the-log-synchronization-performance-of-the-standby-tenant.md
@@ -1,6 +1,6 @@
 # Adjust the log synchronization performance of a standby tenant
 
-OceanBase Database allows you to monitor the log synchronization status of a standby tenant in real time. If the synchronization timestamp of the standby tenant is significantly different from that of the primary tenant, the log synchronization progress of the standby tenant may lag behind that of the primary tenant. If the bandwidth between the standby tenant and the recovery source is sufficient, you can modify the tenant-level `log_restore_concurrency` parameter to adjust the concurrency of log synchronization of the standby tenant, to improve the log synchronization performance of the standby tenant.
+OceanBase Database allows you to monitor the log synchronization status of a standby tenant in real time. If the synchronization timestamp of the standby tenant is significantly different from that of the primary tenant, the log synchronization progress of the standby tenant may lag behind that of the primary tenant. If the bandwidth between the standby tenant and the restore source is sufficient, you can modify the tenant-level `log_restore_concurrency` parameter to adjust the concurrency of log synchronization of the standby tenant, to improve the log synchronization performance of the standby tenant.
 
 For more information about how to view the log synchronization status of a standby tenant, see [Monitor the log synchronization status of a standby tenant](4.monitor-the-log-synchronization-of-the-standby-tenant.md).
 
@@ -12,12 +12,12 @@ For more information about how to view the log synchronization status of a stand
 
    The tenant-level `log_restore_concurrency` parameter specifies the total number of worker threads for log synchronization. The modification of this parameter takes effect immediately without restarting the OBServer node. The default value of this parameter is `1` and the valid value ranges from [1 to 10]. If you set this parameter to a value greater than 10, `10` will be used instead. We recommend that you use the default value because more threads consume more memory.
 
-<main id="notice" type='notice'>
+   <main id="notice" type='notice'>
    <h4>Notice</h4>
    <p>If the tenant is configured with 2 or 4 CPU cores, we recommend that you use the default value. </p>
    </main>
 
-   If you have configured sufficient bandwidth between the standby tenant and the recovery source, you can increase the concurrency. If the recovery source uses NFS, you can set the `log_restore_concurrency` parameter to `5`, which is sufficient for most business scenarios.
+   If you have configured sufficient bandwidth between the standby tenant and the restore source, you can increase the concurrency. If the restore source uses NFS, you can set the `log_restore_concurrency` parameter to `5`, which is sufficient for most business scenarios.
 
    Execute the following statement to set the concurrency:
 
