--- a/en-US/6.manage/5.security-and-permissions/3.access-control/1.access-control-overview.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/1.access-control-overview.md
@@ -1,6 +1,6 @@
 # Overview
 
-The access control feature prevents unauthorized users from accessing database data through privilege and functional design. In terms of privilege design, OceanBase Database ensures account security by setting different authentication policies for users or roles. As different users or roles have different responsibilities, OceanBase Database's Oracle mode and MySQL mode provide different user policies and role policies, allowing users to be granted different privileges and roles. In terms of functional design, OceanBase Database maintains secure database access by setting whitelists, Label Security access policies, and so on.
+The access control feature prevents unauthorized users from accessing database data through privilege and functional design. In terms of privilege design, OceanBase Database ensures account security by setting different authentication policies for users or roles. As different users or roles have different responsibilities, OceanBase Database's Oracle mode and MySQL mode provide different user policies and role policies, allowing users to be granted different privileges and roles. In terms of functional design, OceanBase Database maintains secure database access by setting allowlists, Label Security access policies, and so on.
 
 ## Privilege management
 
@@ -16,9 +16,9 @@ For more information, see the following topics:
 
 ## Network security access control
 
-OceanBase Database provides a whitelist policy to achieve network security access control. You can use the tenant whitelist feature to set which clients are allowed to access the current tenant.
+OceanBase Database provides an allowlist policy to achieve network security access control. You can use the tenant allowlist feature to set which clients are allowed to access the current tenant.
 
-For more information about how to set a whitelist, see [Network security access control](3.network-security-access-control.md).
+For more information about how to set an allowlist, see [Network security access control](3.network-security-access-control.md).
 
 ## Row-level access control
 
