--- a/en-US/7.reference/5.system-reference/3.system-variable-of-oracle-mode/2.system-variable-overview-of-oracle-mode.md
+++ b/en-US/7.reference/5.system-reference/3.system-variable-of-oracle-mode/2.system-variable-overview-of-oracle-mode.md
@@ -159,11 +159,11 @@ This topic lists the system variables of OceanBase Database in detail based on t
 |------------------------------------------------------|----------------------|
 | [foreign_key_checks](27.foreign_key_checks-of-oracle-mode.md) | Specifies whether to enable foreign key constraint check for DML or DDL statements.  |
 
-## Whitelist variables
+## Allowlist variables
 
 | Variable | Description |
 |---------------------------------------------------------------------|---------------------------------------------------------------------------|
-| [ob_tcp_invited_nodes](96.ob_tcp_invited_nodes-of-oracle-mode.md) | The IP address whitelist of a tenant. The value can contain percent signs (%), underscores (_), and IP addresses. Multiple IP addresses are separated with commas (,). IP list matching, mask matching, and fuzzy matching are supported.  |
+| [ob_tcp_invited_nodes](96.ob_tcp_invited_nodes-of-oracle-mode.md) | The IP address allowlist of a tenant. The value can contain percent signs (%), underscores (_), and IP addresses. Multiple IP addresses are separated with commas (,). IP list matching, mask matching, and fuzzy matching are supported.  |
 
 ## Throttling variables
 
