--- a/en-US/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
+++ b/en-US/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
@@ -50,7 +50,7 @@ If the traffic in the tenant is heavy, a single obcdc instance may fail to synch
 
     <main id="notice" type='notice'>
       <h4>Notice</h4>
-      <p>You must configure a blacklist and a whitelist in the preceding two scenarios. </p>
+      <p>You must configure a blocklist and an allowlist in the preceding two scenarios. </p>
     </main>
 
 3. If it is difficult for a single obcdc instance to synchronize a single table, you can configure multiple obcdc instances for the table and use one instance for each hash partition of the table. 
@@ -60,21 +60,21 @@ If the traffic in the tenant is heavy, a single obcdc instance may fail to synch
       <p>In this case, you must configure multiple obcdc instances. </p>
     </main>
 
-#### Whitelist- and blacklist-related parameters
+#### Allowlist- and blocklist-related parameters
 
 | Parameter | Description | Default value | Real-time modification supported | Remarks |
 |-----------------------|--------------------|----------|--------|--------------------------------------------------------|
-| tb_white_list | The whitelist of the tables to be synchronized. | \*.\*.\* | No | Format: tenant name.database name.table name, such as mytenant1.db1.tb1\|mytenant2.db2.\*.  |
-| tb_black_list | The blacklist of tables to be synchronized. | `|` | No | The format is the same as above.  |
-| tablegroup_white_list | The whitelist of table groups to be synchronized. | \*.\* | No | Format: tenant name.table group name, such as (mytenant1.*|or_tenant*.tg*).  |
-| tablegroup_black_list | The blacklist of table groups that will not be synchronized. | `|` | No | The format is the same as above.  |
+| tb_white_list | The allowlist of the tables to be synchronized. | \*.\*.\* | No | Format: tenant name.database name.table name, such as mytenant1.db1.tb1\|mytenant2.db2.\*.  |
+| tb_black_list | The blocklist of tables to be synchronized. | `|` | No | The format is the same as above.  |
+| tablegroup_white_list | The allowlist of table groups to be synchronized. | \*.\* | No | Format: tenant name.table group name, such as (mytenant1.*|or_tenant*.tg*).  |
+| tablegroup_black_list | The blocklist of table groups that will not be synchronized. | `|` | No | The format is the same as above.  |
 | enable_filter_sys_tenant | Specifies whether to filter synchronization data of the sys tenant. | 0 | No | Enable this option when the sys tenant is abnormal but the user tenants are normal.  |
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>obcdc provides data filtering capabilities based on table and table group whitelists and blacklists.</p>
+    <p>obcdc provides data filtering capabilities based on table and table group allowlists and blocklists.</p>
     <ul>
-    <li>Only the tables and table groups in the whitelist but not in the blacklist will be synchronized. By default, all tables and table groups in all tenants are in the whitelist, and the blacklist is empty. We recommend that you configure a whitelist for the production environment to synchronize data of specified tenants. Do not use the default values, which may pull redundant data. </li>
+    <li>Only the tables and table groups in the allowlist but not in the blocklist will be synchronized. By default, all tables and table groups in all tenants are in the allowlist, and the blocklist is empty. We recommend that you configure a allowlist for the production environment to synchronize data of specified tenants. Do not use the default values, which may pull redundant data. </li>
     <li>The fnmatch function is used to match tables and table groups based on regular expressions. By default, case sensitivity is disabled for matching tables and table groups. You can set enable_oracle_mode_match_case_sensitive to 1 to enable case sensitivity. </li>
     </ul>
   </main>
@@ -137,8 +137,8 @@ obcdc V4.1 can obtain metadata such as information about schemas and log streams
 
 | Parameter | Description | Default value | Real-time modification supported | Remarks |
 |-----------------------------------------|-----------------------------------|-----|--------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| skip_rename_tenant_ddl | Specifies whether to ignore DDL statements that rename a tenant. | No | Yes | The renamed tenant is not affected if it is not included in the obcdc synchronization whitelist. Otherwise, an error message is displayed and the process is terminated. This is because the rename operation overruns the whitelist restriction. In this case, we recommend that you modify the whitelist to support the tenants before and after the rename operation.  When the value is set to true, the system will skip the DDL statements of the renamed tenant and continue the data synchronization.  |
-| enable_oracle_mode_match_case_sensitive | The case sensitivity of tenants against the blacklist or whitelist in Oracle mode of OceanBase Database. | No | No |                                                                                                                                                                    |
+| skip_rename_tenant_ddl | Specifies whether to ignore DDL statements that rename a tenant. | No | Yes | The renamed tenant is not affected if it is not included in the obcdc synchronization allowlist. Otherwise, an error message is displayed and the process is terminated. This is because the rename operation overruns the allowlist restriction. In this case, we recommend that you modify the allowlist to support the tenants before and after the rename operation.  When the value is set to true, the system will skip the DDL statements of the renamed tenant and continue the data synchronization.  |
+| enable_oracle_mode_match_case_sensitive | The case sensitivity of tenants against the blocklist or allowlist in Oracle mode of OceanBase Database. | No | No |                                                                                                                                                                    |
 
 ## Fetcher module-related parameters
 
@@ -160,7 +160,7 @@ obcdc V4.1 can obtain metadata such as information about schemas and log streams
 
 ### Filter data based on cluster_id
 
-obcdc allows you to filter data based on the cluster_id blacklist. Although OceanBase Database specifies a valid cluster_id range, you can specify the cluster_id values to filter out the following unwanted data in a synchronization task: For more information about how to configure cluster_id values, see [ob_org_cluster_id](../../../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/81.ob_org_cluster_id-of-oracle-mode.md). 
+obcdc allows you to filter data based on the cluster_id blocklist. Although OceanBase Database specifies a valid cluster_id range, you can specify the cluster_id values to filter out the following unwanted data in a synchronization task: For more information about how to configure cluster_id values, see [ob_org_cluster_id](../../../../../7.reference/5.system-reference/3.system-variable-of-oracle-mode/81.ob_org_cluster_id-of-oracle-mode.md). 
 
 * The data that is not included in the valid cluster_id range specified by OceanBase Database and OceanBase Migration Service (OMS). The value range is \[1, 4294901759\] U \[4294901760, 4294967295\]. 
 * The data that is specified in the cluster_id_black_list field. 
@@ -168,30 +168,30 @@ obcdc allows you to filter data based on the cluster_id blacklist. Although Ocea
 
 | Parameter | Description | Default value | Real-time modification supported | Remarks |
 |----------------------------|----------------------|------------|--------|------------------------------------------------------------------------------|
-| cluster_id_black_list | The blacklist of cluster IDs. | `|` | No | Separate multiple cluster IDs with vertical bars (`|`). Each cluster ID ranges from cluster_id_value_min to cluster_id_value_max.  |
-| cluster_id_black_value_min | The lower limit of cluster IDs in the synchronization blacklist. | 2147473648 | No |                                                                              |
-| cluster_id_black_value_max | The upper limit of cluster IDs in the synchronization blacklist. | 2147483647 | No |                                                                              |
+| cluster_id_black_list | The blocklist of cluster IDs. | `|` | No | Separate multiple cluster IDs with vertical bars (`|`). Each cluster ID ranges from cluster_id_value_min to cluster_id_value_max.  |
+| cluster_id_black_value_min | The lower limit of cluster IDs in the synchronization blocklist. | 2147473648 | No |                                                                              |
+| cluster_id_black_value_max | The upper limit of cluster IDs in the synchronization blocklist. | 2147483647 | No |                                                                              |
 
-### Server-level blacklist parameters
+### Server-level blocklist parameters
 
 obcdc can send SQL and RPC requests to the OBServer nodes. OceanBase Database provides parameters that allow you to block all requests sent to specific servers. 
 
-In addition, as obcdc pulls logs at the partition level, a built-in blacklist is provided to add servers that have timed out or errors when pulling partition logs to the blacklist. Servers are automatically added to or removed from the blacklist. 
+In addition, as obcdc pulls logs at the partition level, a built-in blocklist is provided to add servers that have timed out or errors when pulling partition logs to the blocklist. Servers are automatically added to or removed from the blocklist. 
 
 | Parameter | Description | Default value | Real-time modification supported | Remarks |
 |----------------------|-------------------------------|-----|--------|-----------------------------------------------------------------------------------------------------------|
-| server_blacklist | A blacklist of servers that are blocked from receiving RPC requests from obcdc. | `|` | Yes | Servers are separated with vertical bars (`|`). Logs are not pulled from servers in the blacklist. You can manually add a server to the blacklist when the server cannot provide log services. For example, you can add a server to the blacklist in the case of network partitioning and high latency.  |
-| sql_server_blacklist | A blacklist of servers that are blocked from receiving SQL requests from obcdc. | `|` | Yes | Multiple servers are separated with vertical bars (`|`). SQL query requests will not be forwarded to the servers in the blacklist.  |
+| server_blacklist | A blocklist of servers that are blocked from receiving RPC requests from obcdc. | `|` | Yes | Servers are separated with vertical bars (`|`). Logs are not pulled from servers in the blocklist. You can manually add a server to the blocklist when the server cannot provide log services. For example, you can add a server to the blocklist in the case of network partitioning and high latency.  |
+| sql_server_blacklist | A blocklist of servers that are blocked from receiving SQL requests from obcdc. | `|` | Yes | Multiple servers are separated with vertical bars (`|`). SQL query requests will not be forwarded to the servers in the blocklist.  |
 
-### Partition-level blacklist parameters (generally not modified)
+### Partition-level blocklist parameters (generally not modified)
 
 | Parameter | Description | Default value | Real-time modification supported | Remarks |
 |--------------------------------------------|-------------------------|-----|--------|---------|
-| blacklist_survival_time_sec | The waiting time of servers in the blacklist. Unit: seconds. | 30 | No |         |
-| blacklist_survival_time_upper_limit_min | The maximum period of servers in the blacklist. Unit: minutes. | 4 | Yes |         |
-| blacklist_survival_time_penalty_period_min | The penalty time interval threshold. If a server is added to the blacklist again within this time interval, the time for the server to stay in the blacklist is doubled. Unit: minutes. | 1 | Yes |         |
-| blacklist_history_overdue_time_min | The period after which a server is deleted from the blacklist history. Unit: minutes. | 30 | Yes | Minimum value: 10. |
-| blacklist_history_clear_interval_min | The time interval for clearing the information about servers in the blacklist. Unit: minutes. | 20 | Yes | Minimum value: 10. |
+| blacklist_survival_time_sec | The waiting time of servers in the blocklist. Unit: seconds. | 30 | No |         |
+| blacklist_survival_time_upper_limit_min | The maximum period of servers in the blocklist. Unit: minutes. | 4 | Yes |         |
+| blacklist_survival_time_penalty_period_min | The penalty time interval threshold. If a server is added to the blocklist again within this time interval, the time for the server to stay in the blocklist is doubled. Unit: minutes. | 1 | Yes |         |
+| blacklist_history_overdue_time_min | The period after which a server is deleted from the blocklist history. Unit: minutes. | 30 | Yes | Minimum value: 10. |
+| blacklist_history_clear_interval_min | The time interval for clearing the information about servers in the blocklist. Unit: minutes. | 20 | Yes | Minimum value: 10. |
 
 ### Server cache-related parameters
 
